User can submit a file

--- a/static/html/channel.html
+++ b/static/html/channel.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Facebook SDK Channel File</title>
 </head>
 <body>
+<p><a href="https://developers.facebook.com/docs/reference/javascript/#channel">Documentation about the channel file</a>
+</p>
 <script src="//connect.facebook.net/en_US/all.js"></script>
 </body>
 </html>
